# cleanAIF

./: .gitignore  CHANGELOG.md  README.md  cleanaif-refs.bib  pyproject.toml
logs/16.01.2025_15.33.42_GridWorld-v1r1e10prFstatesASkdlAFlBFlDF/: data.npy
src/clean_aif/: __init__.py  ag_paths_cfg.py  ag_plans_cfg.py  aif_paths.py  aif_paths_cont.py  aif_paths_gridw16_cfg.py  aif_paths_gridw9_cfg.py  aif_paths_tmaze4_cfg.py  aif_paths_ymaze4_cfg.py  aif_pi_paths.py  aif_plans.py  aif_plans_gridw16_cfg.py  aif_plans_gridw9_cfg.py  aif_plans_pi_cutoff.py  aif_plans_tmaze3_cfg.py  aif_plans_tmaze4_cfg.py  aif_plans_ymaze4_cfg.py  config.py  plot_aif_paths.py  plot_utils_paths.py  utils.py  utils_paths.py  utils_paths_cont.py  utils_plans.py  utils_plans_cutoff.py  vis_paths.py  vis_paths[NOT_USED].py  vis_paths_cont.py  vis_plans.py  vis_plots.py  vis_utils.py  vis_utils_paths.py  vis_utils_paths_cont.py  vis_utils_plans.py
src/clean_aif/agents/: __init__.py  aif_aa.py  aif_aa_pi_cutoff.py  aif_au.py
src/clean_aif/config_agents/: aif_aa_gridw9_cfg.py  aif_aaau_gridw9_cfg.py  aif_au_gridw16_cfg.py  aif_au_gridw9_cfg.py  aif_au_tmaze3_cfg.py  aif_au_ymaze4_cfg.py
src/clean_aif/utils_agents/: utils_aa.py  utils_aa_cutoff.py
