[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clean_aif"
authors = [
    {name = "Filippo Torresan", email = "merlin.onirik.d98xe@slmail.me"},
]
description = "My package description"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["active inference", "gridworld"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "opencv-python",
    "gymnasium >= 0.27",
]

[tool.hatch.version]
path = "src/clean_aif/__init__.py"

[project.scripts]
# main refers to the function inside the script `aif_au.py`
main_aif_au = "clean_aif.agents.aif_au:main"
# main refers to the function inside the script `aif_aa.py`
main_aif_aa = "clean_aif.agents.aif_aa:main"
# main refers to the function inside the script `aif_aa_pi_cutoff.py`
main_aif_aa_pi_cutoff = "clean_aif.agents.aif_aa_pi_cutoff:main"
# entry script for plotting results from aif_paths.py
vis_aif = "clean_aif.vis_plots:main"
